When editing the name of file items opening a context-menu for the text-editor may not result in closing the rename-operation. Thanks to Zé for the patch!

BUG: 182353
FIXED-IN: 4.6.1

svn path=/branches/KDE/4.6/kdelibs/; revision=1216194